fibo-calc/deploy/api-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-cluster-ip-service
spec:
  selector:
    app: fibo-calc-api
  ports:
    - port: 5000
      targetPort: 5000
