fibo-calc/deploy/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  selector:
    app: fibo-calc-client
  ports:
    - port: 3000
      targetPort: 3000
