fibo-calc/deploy/postgress-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgress-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: post
  ports:
  - port: 5432
    targetPort: 5432
